# s3_upload_docker

./: .github  Makefile  readme.md
.github/workflows/: main.yml
helm/s3-upload/: Chart.yaml  clusterrolebinding.yaml  values.yaml
helm/s3-upload/templates/: _helpers.tpl  deployments.yaml  namespaces.yaml  prometheus.yaml  serviceaccount.yaml  services.yaml
helm/s3-upload/templates/tests/: test-connection.yaml
helm/variables/: prometheus.yaml
tfm/dev/: main.tf  provider.tf  variables.tf
tfm/dev/.terraform/modules/: modules.json
tfm/upload/ecr/: ecr.tf  outputs.tf  variables.tf
tfm/upload/eks/: eks.tf  outputs.tf  variables.tf
tfm/upload/iam/: eks_service_role_attachment.tf  iam.tf  users.tf  variables.tf
tfm/upload/network/: outputs.tf  variables.tf  vpc.tf
tfm/upload/s3/: outputs.tf  s3.tf  variables.tf
tfm/upload/ssm/: parameters.tf  variables.tf
upload/: Dockerfile  main.py  pyproject.toml
upload/flask/: app.py  main.py
upload/flask/templates/: index.html
upload/upload_flask/: app.py
upload/upload_flask/templates/: index.html
