[project]
name = "upload_flask"
version = "1.0.0"
description = "A containerised website that uploads and displays jpegs in an AWS S3 bucket."
dependencies = [
    "flask",
    "boto3",
    "botocore",
    "waitress",
    "requests"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"